RESOLVED FIXED23456
Function argument names leak
https://bugs.webkit.org/show_bug.cgi?id=23456
Summary Function argument names leak
Alexey Proskuryakov
Reported 2009-01-21 09:32:07 PST
After evaluating <http://trac.webkit.org/browser/trunk/LayoutTests/fast/workers/resources/worker-common.js> in a worker thread, there is a leak of "evt" detected. I'm not sure why this only happened in workers, and only on a single test, but Oliver showed me how to fix this in JavaScriptCore, patch forthcoming as soon as tests are done.
Attachments
proposed patch (1.05 KB, patch)
2009-01-21 09:50 PST, Alexey Proskuryakov
oliver: review+
Alexey Proskuryakov
Comment 1 2009-01-21 09:50:06 PST
Created attachment 26896 [details] proposed patch
Alexey Proskuryakov
Comment 2 2009-01-21 10:10:40 PST
Committed revision 40086.
Note You need to log in before you can comment on or make changes to this bug.