        Suggested by Oliver Hunt. Reviewed by Oliver Hunt.

https://bugs.webkit.org/show_bug.cgi?id=23456
        Function argument names leak

        * parser/Nodes.cpp: (JSC::FunctionBodyNode::~FunctionBodyNode): Destruct parameter names.



Canonical link: https://commits.webkit.org/32282@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40086 268f45cc-cd09-0410-ab3c-d52691b4dbfc